; ModuleID = '/home/carl/AnghaBench/linux/drivers/iommu/extr_io-pgtable-arm-v7s.c_arm_v7s_is_mtk_enabled.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/iommu/extr_io-pgtable-arm-v7s.c_arm_v7s_is_mtk_enabled.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.io_pgtable_cfg = type { i32 }

@CONFIG_PHYS_ADDR_T_64BIT = common dso_local global i32 0, align 4
@IO_PGTABLE_QUIRK_ARM_MTK_EXT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.io_pgtable_cfg*)* @arm_v7s_is_mtk_enabled to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @arm_v7s_is_mtk_enabled(%struct.io_pgtable_cfg* %0) #0 {
  %2 = alloca %struct.io_pgtable_cfg*, align 8
  store %struct.io_pgtable_cfg* %0, %struct.io_pgtable_cfg** %2, align 8
  %3 = load i32, i32* @CONFIG_PHYS_ADDR_T_64BIT, align 4
  %4 = call i64 @IS_ENABLED(i32 %3)
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %13

6:                                                ; preds = %1
  %7 = load %struct.io_pgtable_cfg*, %struct.io_pgtable_cfg** %2, align 8
  %8 = getelementptr inbounds %struct.io_pgtable_cfg, %struct.io_pgtable_cfg* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load i32, i32* @IO_PGTABLE_QUIRK_ARM_MTK_EXT, align 4
  %11 = and i32 %9, %10
  %12 = icmp ne i32 %11, 0
  br label %13

13:                                               ; preds = %6, %1
  %14 = phi i1 [ false, %1 ], [ %12, %6 ]
  %15 = zext i1 %14 to i32
  ret i32 %15
}

declare dso_local i64 @IS_ENABLED(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
